<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/spinnerRepoContainer"
        android:background="@color/gray_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinnerRepo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
        />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llEmptyRepoList"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvEmptyRepoList"
            android:text="@string/add_one_or_more_repos"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/spinnerRepoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:orientation="vertical">

        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/pbGroup"
            android:layout_marginTop="20dp"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/fabAddRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add"
        android:layout_margin="16dp" />
</RelativeLayout>


