<resources>
    <string name="app_name">PDZ</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="database_name">rit-portal-database</string>
    <string name="repo_username">Username</string>
    <string name="repo_repository">Repository</string>
    <string name="add_one_or_more_repos">Adicione um ou mais repositórios</string>
    <string name="error_load_repo_items">Erro ao carregar itens do repositório</string>
    <string name="base_url">https://api.github.com</string>
    <string name="command">command</string>
    <string name="group_icon">Group icon</string>
    <string name="fill_all_inputs">Fill all inputs!</string>
    <string name="new_repo">New repo</string>

</resources>